see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

03-Jul-2010 Jean-Marie Simonet
 # [#20796] Joomla! caches ALL HTML in 1 file. Thanks Klas.
 # [#21285] Missing "State" filter for page Extension Manager: Manage
 $ Correcting some ini/keys
 
02-Jul-2010 Jean-Marie Simonet
 # [#21284] * Language sorting by id broken
 # Missing icon in Messages toolbar (missing from #20836 patch)
 $ [#21279] COM_USERS_GROUPS_NO_ITEM_SELECTED and others similar message undefined
 $ Adding missing string.
 
02-Jul-2010 Mark Dexter
# Fix typo from earlier bug fix ([#20634]

02-Jul-2010 Andrew Eddie
 # Fixed issue [#21181] Consistent use of authorise vs authorize (Rune Sjøen).

01-Jul-2010 Jean-Marie Simonet
 $ [#21265] [patch] Inserting new weblink in backend describes new newsfeeds ordering
 # [#21244] Unable to change "Linked User" to "No User" in Contacts. Thanks Bill.
 # [#21272] * Checkall broken for contacts, cache, languages. messages

01-Jul-2010 Andrew Eddie
 # Fixed issue [#21056] Trashing module leaves an erroneous entry in module position dropdown lists

01-Jul-2010 Christophe Demko
 # Fixed issue [#21254] Different markup in modal and non-modal menu assignment dialog + Correcting the misplaced <h3> tag
 # Fixed issue [#21249] [patch] Module menu assignments in modal checkmark boxes
 # Fixed issue [#21269] *User modal forces horizontal scrolling. Search field size too big
 # Fix an error in core-uncompressed.js code for ie7/ie8

30-Jun-2010 Ian MacLennan
 # [#21126] Token Error on Installation
 # [#20964] Token error on logon
 # [#21150] Restore 1.5 ability for multiple categories for banner module
 # [#21212] Head tags for mod_articles_categories