@@ -53,7 +53,7 @@ COM_INSTALLER_MSG_INSTALL_PLEASE_SELECT_A_DIRECTORY="Please select a directory"
 COM_INSTALLER_MSG_INSTALL_WARNINSTALLFILE="The installer cannot continue until file uploads are enabled for the server."
 COM_INSTALLER_MSG_INSTALL_WARNINSTALLUPLOADERROR="There was an error uploading this file to the server."
 COM_INSTALLER_MSG_INSTALL_WARNINSTALLZLIB="The installer cannot continue until Zlib is installed."
-COM_INSTALLER_MSG_MANAGE_NOEXTENSION="There are no_extensions installed matching your query"
+COM_INSTALLER_MSG_MANAGE_NOEXTENSION="There are no extensions installed matching your query"
 COM_INSTALLER_MSG_UPDATE_ERROR="Error updating %s"
 COM_INSTALLER_MSG_UPDATE_NODESC="No description available for this item."
 COM_INSTALLER_MSG_UPDATE_NOUPDATES="There are no updates available at the moment. Please check again later."
