@@ -5,5 +5,5 @@
 ; Note : All ini files need to be saved as UTF-8
 
 PLG_SYSTEM_LANGUAGEFILTER="System - Language Filter"
-PLG_SYSTEM_LANGUAGEFILTER_XML_DESCRIPTION="This plugin filters the displayed content depending on language.<br><strong>This plugin is to be used only when the module Language Switcher is published. SEF prefix will be attended to the URLs when the System - Language Sef plugin is enabled.</strong>"
+PLG_SYSTEM_LANGUAGEFILTER_XML_DESCRIPTION="This plugin filters the displayed content depending on language.<br><strong>This plugin is to be enabled only when the Language Switcher module is published.</strong>"
 
