@@ -10,24 +10,22 @@ COM_LANGUAGES_ERR_DELETE="Select a language to delete"
 COM_LANGUAGES_ERR_NO_LANGUAGE_SELECTED="No Language Selected"
 COM_LANGUAGES_ERR_PUBLISH="Select a language to publish"
 COM_LANGUAGES_FIELD_DESCRIPTION_DESC="Enter here a description for the language"
-COM_LANGUAGES_FIELD_IMAGE_DESC="Name of the image file for this language when using the "_QQ_"Use image flags"_QQ_" Language Switcher basic option. Example: if 'en' is chosen, then the image shall be en.gif. Images and CSS for this module are in media/mod_languages/"
-COM_LANGUAGES_FIELD_IMAGE_LABEL="Image"
-COM_LANGUAGES_FIELD_LANG_CODE_DESC="Enter here the language tag – example: xx-XX for English (UK). This should be the exact prefix used for the language installed or to be installed."
-COM_LANGUAGES_FIELD_LANG_CODE_LABEL="Code"
+COM_LANGUAGES_FIELD_IMAGE_DESC="Prefix of the image file for this language when using the "_QQ_"Use image flags"_QQ_" Language Switcher basic option. Example: if 'en' is chosen, then the image shall be en.gif. Images and CSS for this module are in media/mod_languages/"
+COM_LANGUAGES_FIELD_IMAGE_LABEL="Image Prefix"
+COM_LANGUAGES_FIELD_LANG_TAG_DESC="Enter here the language tag – example: xx-XX for English (UK). This should be the exact prefix used for the language installed or to be installed."
+COM_LANGUAGES_FIELD_LANG_TAG_LABEL="Language Tag"
 COM_LANGUAGES_FIELD_PUBLISHED_DESC="Whether this content language is published or not. If published, it will display as a choice in the Language Switcher module in frontend."
-COM_LANGUAGES_FIELD_SEF_DESC="SEF for this language. If 'en' is used, then it will be added after the site url. Example http://mysite.com/en/. Note <em>the prefix must be unique over all the languages<em>."
-COM_LANGUAGES_FIELD_SEF_LABEL="SEF"
+COM_LANGUAGES_FIELD_LANG_CODE_DESC="This Language Code will be appended to the site url. When SEF is enabled, one will get  http://mysite.com/en/. If SEF is disabled the suffix &amp;lang=en will be appended at the end of the URL. Note <em>the Language Code must be unique among all the languages<em>."
+COM_LANGUAGES_FIELD_LANG_CODE_LABEL="URL Language Code"
 COM_LANGUAGES_FIELD_TITLE_DESC="The name of the language as it will appear in the lists"
 COM_LANGUAGES_FIELD_TITLE_NATIVE_DESC="Title in Native language"
 COM_LANGUAGES_FIELD_TITLE_NATIVE_LABEL="Title Native"
-COM_LANGUAGES_FILTER_CLIENT_LABEL="Filter Type:"
+COM_LANGUAGES_FILTER_CLIENT_LABEL="Filter Location:"
 COM_LANGUAGES_FTP_DESC="For setting Languages as default, Joomla! will most likely need your FTP account details. Please enter them in the form fields below."
 COM_LANGUAGES_FTP_TITLE="FTP Login Details"
 COM_LANGUAGES_HEADING_AUTHOR_EMAIL="Author Email"
 COM_LANGUAGES_HEADING_DEFAULT="Default"
-COM_LANGUAGES_HEADING_LANG_CODE="Language Code"
 COM_LANGUAGES_HEADING_LANG_IMAGE="Image Prefix"
-COM_LANGUAGES_HEADING_LANG_SEF="SEF Prefix"
 COM_LANGUAGES_HEADING_LANGUAGE="Language"
 COM_LANGUAGES_HEADING_NUM="Num"
 COM_LANGUAGES_HEADING_TITLE_NATIVE="Native Title"
